# gomori

./: Cargo.toml  README.md
.github/workflows/: CI.yml
bots/: greedy_bot.json  max_bot.json  random_bot.json  schwarzenegger_bot.json  schwarzenegger_bot.py
bots/greedy_bot/: Cargo.toml
bots/greedy_bot/src/: main.rs
bots/max_bot/: Cargo.toml
bots/max_bot/src/: game_state.rs  lib.rs  main.rs
bots/random_bot/: Cargo.toml
bots/random_bot/src/: main.rs
gomori/: Cargo.toml  README.md
gomori-py/: Cargo.toml  README.md  pyproject.toml
gomori-py/python/gomori/: __init__.py
gomori-py/src/: bot.rs  lib.rs
gomori/src/: arbitrary.rs  board.rs  cards.rs  cards_set.rs  errors.rs  helpers.rs  lib.rs  player_state.rs  protocol.rs  protocol_types.rs  turn.rs  visualization.rs
gomori/src/board/: bbox.rs  bitboard.rs  compact_field.rs  dense.rs  error.rs  sparse.rs
gomori/src/helpers/: bitset_traits.rs
gomori/src/python/: cards.rs  mod.rs
gomori/src/python/board/: bbox.rs  compact_field.rs  mod.rs
gomori_bot_utils/: Cargo.toml
gomori_bot_utils/src/: card_counting.rs  lib.rs
gomori_tui/: Cargo.toml  README.md
gomori_tui/src/: main.rs
greedy_bot/: Cargo.toml
greedy_bot/src/: main.rs
judge/: Cargo.toml
judge/src/: error.rs  game.rs  lib.rs  main.rs  player.rs  recording.rs  turn.rs
random_bot/: Cargo.toml
random_bot/src/: main.rs
