[package]
name = "gomori"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
pyo3 = { version = "0.18.1", optional = true }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"

[features]
python = ["dep:pyo3"]