[package]
name = "judge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
gomori = { path = "../gomori" }
rand = "0.8.5"
serde = "1.0.203"
serde_json = "1.0.118"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
