[package]
name = "random_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
gomori = { path = "../gomori" }
gomori_bot_utils = { path = "../gomori_bot_utils" }
anyhow = "1.0.86"
serde_json = "1.0.118"
