[package]
name = "max_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
gomori = { path = "../../gomori" }
gomori_bot_utils = { path = "../../gomori_bot_utils" }
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
